# httpout

./: .coveragerc  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  sonar-project.properties
.github/workflows/: build_and_release.yml  tests-and-coverage.yml  tests_and_coverage.yml
example/: __globals__.py  exc.py  exit.py  foo.py  hybrid.py  main.py
examples/: __globals__.py  environ.py  exc.py  exit.py  foo.py  hybrid.py  import.py  main.py  path.py  syntax.py
examples/bar/: __init__.py  baz.py
httpout/: __init__.py  __main__.py  exceptions.py  httpout.py  request.py  response.py  utils.py
httpout/lib/: http_response.py
httpout/utils/: __init__.py  _modules.py  modules.c  modules.py  modules.pyx
tests/: __main__.py  test_cli.py  test_http.py  utils.py
