[build-system]
requires = [ 'setuptools>=61.0', 'wheel', 'Cython' ]
build-backend = 'setuptools.build_meta'

[project]
name = 'httpout'
authors = [
    { name = 'nggit', email = 'contact@anggit.com' },
]
description = """\
    httpout is a runtime environment for Python files. \
    It allows you to execute your Python scripts from a web URL, \
    the print() output goes to your browser.\
    """
requires-python = '>=3.7'
dependencies = [
    'awaiter',
    'tremolo>=0.2.0',
]
license = { text = 'MIT License' }
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Topic :: Internet :: WWW/HTTP :: HTTP Servers',
    'Topic :: Software Development :: Libraries :: Application Frameworks',
]
dynamic = [ 'version', 'readme' ]

[project.urls]
Homepage = 'https://github.com/nggit/httpout'
Source = 'https://github.com/nggit/httpout'
Funding = 'https://github.com/sponsors/nggit'

[tool.setuptools.dynamic]
version = { attr = 'httpout.__version__' }
readme = { file = 'README.md', content-type = 'text/markdown' }
